--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
   <groupId>com.github.sebhoss</groupId>
   <artifactId>math-clj</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>clojure</packaging>
   <name>math-clj</name>
   <description>FCommon math functions for Clojure.</description>
