Split math into JDK- and JS-based implementations.
This way we can use different implementations depending on which
platform the code ought to run. Code that depends on this functions just
have to :require the 'math-protocols' and 'math' namespace to get the
right implementation.

Signed-off-by: Sebastian Hoß <mail@shoss.de>

--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
   <artifactId>math-clj</artifactId>
   <version>1.0.1-SNAPSHOT</version>
-  <packaging>clojure</packaging>
+  <packaging>pom</packaging>
   <name>math-clj</name>
   <description>Common math functions for Clojure.</description>
   <url>https://github.com/sebhoss/math-clj</url>
@@ -70,4 +70,9 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <modules>
+  	<module>math-protocols</module>
+  	<module>math-jdk</module>
+  	<module>math-js</module>
+  </modules>
 </project>
