Created pure Clojure-based implementation
Signed-off-by: Sebastian Hoß <mail@shoss.de>

--- a/pom.xml
+++ b/pom.xml
@@ -74,5 +74,6 @@
   	<module>math-protocols</module>
   	<module>math-jdk</module>
   	<module>math-js</module>
+  	<module>math-clojure</module>
   </modules>
 </project>
