--- a/math-js/pom.xml
+++ b/math-js/pom.xml
@@ -24,5 +24,10 @@
       <artifactId>math-protocols</artifactId>
       <version>1.0.1-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>org.clojure</groupId>
+      <artifactId>clojurescript</artifactId>
+      <version>0.0-1859</version>
+    </dependency>
   </dependencies>
 </project>
